Change: Mongo client 방식 변경, jwt 기록 방식 변경

--- a/config/default.toml
+++ b/config/default.toml
@@ -1,36 +1,14 @@
 [server]
 mode = ""
-port = ""
+port = "9186"
 version = ""
 
 [mongo.local]
-[mongo.local.app]
-Host = "mongodb://localhost:27017"
-User = "windowshyun"
-Pass = "hyun!"
-
-[mongo.local.api]
-Host = "mongodb://localhost:27017"
-User = "windowshyun"
-Pass = "hyun!"
-
-[mongo.local.common]
 Host = "mongodb://localhost:27017"
 User = "windowshyun"
 Pass = "hyun!"
 
 [mongo.develop]
-[mongo.develop.app]
-Host = "mongodb://192.168.6.16:27017"
-User = "windowshyun"
-Pass = "hyun!"
-
-[mongo.develop.api]
-Host = "mongodb://192.168.6.16:27017"
-User = "windowshyun"
-Pass = "hyun!"
-
-[mongo.develop.common]
 Host = "mongodb://192.168.6.16:27017"
 User = "windowshyun"
 Pass = "hyun!"
